# landing_ros

./: .gitmodules  README.md  asd.txt  git_clone.sh  src.7z
Simulation/: empty.world
Simulation/d435_camera/: model.sdf
Simulation/nested_tags_visual_marker/: model.sdf
data/: datamavros.txt  datareference.txt
devel/: .catkin  local_setup.sh  setup.sh
devel/include/apriltag_ros/: AnalyzeSingleImageRequest.h  AnalyzeSingleImageResponse.h  AprilTagDetection.h  AprilTagDetectionArray.h
devel/include/aruco_msgs/: Marker.h  MarkerArray.h
devel/include/aruco_ros/: ArucoThresholdConfig.h
devel/include/controller_msgs/: FlatTarget.h
devel/include/mav_msgs/: Actuators.h  AttitudeThrust.h  FilteredSensorData.h  GpsWaypoint.h  RateThrust.h  RollPitchYawrateThrust.h  Status.h  TorqueThrust.h
devel/include/mav_planning_msgs/: ChangeNameServiceRequest.h  ChangeNameServiceResponse.h  PlannerServiceRequest.h  PlannerServiceResponse.h  Point2D.h  PointCloudWithPose.h  Polygon2D.h  PolygonServiceRequest.h  PolygonServiceResponse.h  PolygonWithHoles.h  PolygonWithHolesStamped.h  PolynomialSegment.h  PolynomialSegment4D.h  PolynomialTrajectory.h  PolynomialTrajectory4D.h
devel/include/mav_state_machine_msgs/: RunTaskServiceRequest.h  RunTaskServiceResponse.h  StartStopTask.h
devel/include/mav_system_msgs/: CpuInfo.h  ProcessInfo.h
devel/include/whycon/: Projection.h
devel/lib/apriltag_ros/: apriltag_ros_continuous_node
devel/lib/aruco_ros/: bundle
devel/lib/detector_switch_ros/: aruco_detector_node  cam_info_node  detector_switch_ros_node  transform_adaption_node
devel/lib/geometric_controller/: geometric_controller_node  landing
devel/lib/mav_trajectory_generation/: polynomial_timing_evaluation
devel/lib/mav_trajectory_generation_example/: trajectory_generation_example
devel/lib/mav_trajectory_generation_ros/: trajectory_sampler_node
devel/lib/mav_visualization/: hexacopter_publisher  leica_publisher
devel/lib/pkgconfig/: apriltag.pc  apriltag_ros.pc  aruco.pc  aruco_msgs.pc  aruco_ros.pc  catkin_simple.pc  controller_msgs.pc  detector_switch_ros.pc  eigen_catkin.pc  eigen_checks.pc  geometric_controller.pc  glog_catkin.pc  mav_msgs.pc  mav_planning_msgs.pc  mav_state_machine_msgs.pc  mav_system_msgs.pc  mav_trajectory_generation.pc  mav_trajectory_generation_example.pc  mav_trajectory_generation_ros.pc  mav_visualization.pc  trajectory_publisher.pc  whycon.pc
devel/lib/trajectory_publisher/: trajectory_publisher
devel/lib/whycon/: robot_pose_publisher  set_axis  whycon
devel/share/apriltag_ros/cmake/: apriltag_ros-msg-extras.cmake  apriltag_ros-msg-paths.cmake  apriltag_rosConfig.cmake
devel/share/aruco/cmake/: arucoConfig.cmake
devel/share/aruco_msgs/cmake/: aruco_msgs-msg-extras.cmake  aruco_msgs-msg-paths.cmake  aruco_msgsConfig.cmake
devel/share/aruco_ros/cmake/: aruco_rosConfig.cmake
devel/share/catkin_simple/cmake/: catkin_simple-extras.cmake  catkin_simpleConfig.cmake
ducanh_whycon/launch/: whycon.launch
ducanh_whycon/src/lib/: circle_detector.cpp
ducanh_whycon/src/ros/: set_axis.cpp  whycon_ros.cpp  whycon_uav_node.cpp  whycon_uav_ros.cpp  whycon_uav_ros.h
logs/apriltag_ros/: build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr
logs/glog_catkin/: build.cmake.000.log.stderr
logs/mav_trajectory_generation_ros/: build.make.000.log.stderr
logs/nlopt/: build.make.000.log.stderr
logs/trajectory_publisher/: build.make.000.log.stderr
logs/whycon/: build.make.000.log.stderr
simulation/d435_camera/: manifest.xml  model.config
simulation/iris/: iris.sdf
simulation/nested_tags_visual_marker2m/: model.config  model.sdf
src/apriltag_ros/apriltag_ros/: CMakeLists.txt
src/aruco_ros/aruco_ros/: CMakeLists.txt
src/cctag_ros/: CMakeLists.txt  package.xml
src/cctag_ros/include/cctag_ros/: cctag_detector.h
src/cctag_ros/launch/: cctag_detection.launch
src/cctag_ros/src/: cctag_detector.cpp  cctag_detector_node.cpp
src/detector/: CMakeLists.txt  package.xml
src/detector/launch/: aruco_detector.launch  detector.launch  rs_d435.launch
src/detector/rviz/: debug.rviz  urdf.rviz
src/detector/scripts/: aruco_detector.py  aruco_detector_v1.py  aruco_detector_v2.py  image_dehaze.py  real_cam2ros.py
src/detector/src/: aruco_detector_node.cpp
src/detector_switch_ros/: CMakeLists.txt  package.xml
src/detector_switch_ros/include/: detector_switch.h  landing.h  transform_adaption.h
src/detector_switch_ros/include/detector_switch_ros/: detector_switch.h  landing.h
src/detector_switch_ros/launch/: detector_switch.launch  realdetection.launch
src/detector_switch_ros/src/: aruco_detector.cpp  cam_info.cpp  debug.cpp  detector_switch.cpp  detector_switch_node.cpp  parser_data.cpp  transform_adaption.cpp  transform_adaption_node.cpp
src/include/: landing.h
src/interactive_controller/: CMakeLists.txt  package.xml
src/interactive_controller/launch/: offboard.launch
src/interactive_controller/src/: interactive_controller.cpp
src/mav_comm/mav_planning_msgs/: CMakeLists.txt
src/mav_trajectory_generation/: README.md
src/mav_trajectory_generation/mav_trajectory_generation_example/: CMakeLists.txt
src/mav_trajectory_generation/mav_trajectory_generation_marker/: CMakeLists.txt  package.xml
src/mavros_controllers/geometric_controller/: CMakeLists.txt
src/offboard/: CMakeLists.txt  package.xml
src/offboard/cfg/: pid.cfg  pidcontroller.cfg
src/offboard/include/: pid.h
src/offboard/launch/: sitl_landing_marker.launch
src/offboard/msg/: States.msg
src/offboard/src/: kalman.cpp  offb_node.cpp  offboard_control.cpp  pid.cpp  service_land.cpp
src/transform/: CMakeLists.txt  package.xml
src/transform/include/: generate_curve.h  transform_adaption.h
src/transform/src/: generate_curve.cpp  transform_adaption.cpp  transform_adaption_node.cpp  transform_adaption_node1.cpp
src/transform/test/: test.cpp  test_node.cpp
src/whycon/: CMakeLists.txt
src/whycon/launch/: robot_pose_publisher.launch  whycon.launch
(+105 files in other folders)
