<?xml version="1.0"?>
<package format="2">
    <name>transform_adaption</name>
    <version>0.1.1</version>
    <description>The subscribe package.</description>
    <maintainer email="abc@todo.todo">abc</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf2</build_depend>
    <build_depend>mav_planning_msgs</build_depend>

    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>mav_planning_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>
</package>
